# Multi-agent-bench

./: .gitignore  AGENTS.md  environment.yml  pyproject.toml
configs/: agents.demo.realish.yaml  agents.smoke.yaml  agents.yaml  experiment.dbcoord.demo.yaml  experiment.dbcoord.trial.2x3.yaml  experiment.debug.rolefail.1task_1rollout.20260222T052500Z.yaml  experiment.debug.rolefail.1task_1rollout.20260222T053000Z.yaml  experiment.deepseek-v32-condenser-30x1.yaml  experiment.eval-10x1.yaml  experiment.example.yaml  experiment.fix-validation-2x1.yaml  experiment.full-eval-2model-224x1-20260226.yaml  experiment.full-eval-2model-224x1.yaml  experiment.full-eval-deepseek-v32-224x1.yaml  experiment.intent-smoke-boundaryb-1x1-20260222T214940Z.yaml  experiment.kimi-k25-condenser-30x1.yaml  experiment.kimi2_5-team-sanity-e2bsyncbudget-1x1-20260222T082500Z.yaml  experiment.kimi2_5-team-sanity-e2btimeout-1x1-20260222T084500Z.yaml  experiment.kimi2_5-team-sanity-e2btimeout-1x1-20260222T085500Z.yaml  experiment.kimi2_5-team-sanity-reviewdiffverify-1x1-20260222T090849Z.yaml  experiment.kimi2_5-team-sanity-reviewgate-1x1-20260222T065426Z.yaml  experiment.kimi2_5-team-sanity-workflow-audit-1x1-20260222T062136Z.yaml  experiment.kimi2_5-team-sanity-workflow-audit-1x1-20260222T062155Z.yaml  experiment.kimi2_5-team-sanity-workflow-audit-1x1-20260222T062216Z.yaml  experiment.kimi2_5-team-sanity-workflow-audit-1x1-20260222T062747Z.yaml  experiment.kimi2_5-team-trial-2x3-reviewgate-20260222T081500Z.yaml  experiment.kimi2_5-team-trial-2x3-reviewgate-20260222T090500Z.yaml  (+58 more)
docs/: ARCHITECTURE.md  (+8 more)
(+68 files in other folders)
